# cppTSP-L

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
resources/: temp.txt  valgrind-out.txt
resources/datasets/: circ100.txt  circ200.txt
resources/debug_out/: circ200_GeneticAlg2_2022`5`31-12`29`43.txt  circ200_GeneticAlg2_2022`5`31-12`30`27.txt  circ200_GeneticAlg2_2022`5`31-12`30`59.txt  circ200_GeneticAlg2_2022`5`31-12`31`23.txt  circ200_GeneticAlg2_2022`5`31-12`33`52.txt  circ200_GeneticAlg2_2022`5`31-12`34`36.txt  circ200_GeneticAlg2_2022`5`31-12`39`13.txt  circ200_GeneticAlg2_2022`5`31-12`44`39.txt  circ200_GeneticAlg2_2022`5`31-12`48`31.txt  circ200_GeneticAlg2_2022`5`31-12`49`34.txt  circ200_GeneticAlg2_2022`5`31-12`52`26.txt  circ200_GeneticAlg2_2022`5`31-12`53`23.txt  circ200_GeneticAlg2_2022`5`31-13`40`58.txt  circ200_GeneticAlg2_2022`5`31-13`41`51.txt  circ200_GeneticAlg2_2022`5`31-13`44`16.txt  circ200_GeneticAlg2_2022`5`31-13`45`28.txt  circ200_GeneticAlg2_2022`5`31-13`45`40.txt  circ200_GeneticAlg2_2022`5`31-13`45`58.txt  circ200_GeneticAlg2_2022`5`31-13`48`58.txt  (+310 more)
sandbox/: CMakeLists.txt  Makefile  arr  arr.cpp  main  main.cpp  out  protocol1.txt  sandbox.cpp
scripts/: circle_maker.jl  data_analysis.jl  file_reader.jl  folder_fix.jl  scatter_circ.jl  scatter_example.jl
src/: CMakeLists.txt
src/Assist/: Benchmarks.cpp  Benchmarks.h
src/GenOpt/: Candidate.cpp  Candidate.h  City.cpp  City.h  Contender.cpp  Contender.h  DataLog.cpp  DataLog.h  Optimizers.cpp  Optimizers.h
tests/: CMakeLists.txt  test1.cpp  test2.cpp
(+28 files in other folders)
